tgo: Changelog changes

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+* 28/06/2011 *
+
+ - End of Changelog file.
+   New changes will be tracked inside Git repository.
+   Please check gitweb for details.
+
 * 27/06/2011 *
 
  - Change password allowed now as registered user
