tgo: Added field to bugs object to allow us to see if it's already      been downloaded (or even we tried to).
tgo: Modified patch display to include bugids fixed by
     other revision of the patch or obsoleted patches

tgo: Modified the parser of readme file to better index bugs with patches

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 - better Architecture parsing and sorting
 - Bug ids presentation searching and so on...
 - Show/sort bugs by patch revision when showing patches details
+- When parsing new patches' readme, add bugids found to a "todo list" to update them
