tgo: Added a twitter "formatter" to limit the size of the tweets and      format everthing so it's twitter-compliant.
tgo: Fixed little SQL bug in psearch

tgo: Added API keys for google url shorten services into config

--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 - better Architecture parsing and sorting
 - Bug ids presentation searching and so on...
 - Flag patches to update readme file when needed
+- Readme BUG to fix !
+- Format tweets to ensure 140 char, add tags and url
