--- a/TODO
+++ b/TODO
@@ -4,5 +4,5 @@
 - Flag patches to update readme file when needed
 - Mysql disconnection detection and reconnection if possible...
 - Try to improve browsing experience (main page refurbishing mainly+menu searches)
+- Improve bundle management
 - Add checksum check when downloading patches
-- Archive patchdiag.xref
