--- a/TODO
+++ b/TODO
@@ -4,5 +4,8 @@
 - Flag patches to update readme file when needed
 - Mysql disconnection detection and reconnection if possible...
 - Try to improve browsing experience (main page refurbishing mainly+menu searches)
-- Improve bundle management
 - Add checksum check when downloading patches
+- more searching field
+- Let the user post comments on patchs/bug, theses comments could be private or public
+- Let the user do saved search with notification when the results are changed.
+- History of patch/bug visited.
