--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
 - Try to improve browsing experience (main page refurbishing mainly+menu searches)
 - Add checksum check when downloading patches
 - more searching field
-- Let the user post comments on patchs/bug, theses comments could be private or public
+- Let the user post comments on patchs/bug, theses comments could be either private or public
 - Let the user do saved search with notification when the results are changed.
 - History of patch/bug visited.
+- Add the ability to share publicly custom lists of patches and rate them
