tgo: Fixed batchjob for TODO patches, will now update readme     that have been detected as changed.
tgo: Added a "CLI diff" tool in functions.lib.php to diff files,
    as the xdiff extension of PHP was giving something more crappy.

tgo: Added Multiple readme file support in patch.obj.php and
    also added function to diff every version against each others.

tgo: Added user comment object (ucomment.obj.php)

tgo: Added User confirm object (uconfirm.obj.php) to allow users
    to confirm their account by email. (implemented in dev)

--- a/TODO
+++ b/TODO
@@ -13,6 +13,8 @@ Frontend:
 - Add the ability to share publicly custom lists of patches and rate them
 - Let the user download a pack of readme from a custom list
 - When managing its patch list, user should have the opportunity to change patch to its latest release
+*DONE IN DEV* As we now archive different version of README, we could propose a diff tools on the webgui to see
+  additions to readmes from time to time.
 
 Processing:
 
