tgo: Fixed bug with request containing wrong bugids.

--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Frontend:
 - When managing its patch list, user should have the opportunity to change patch to its latest release
 - refurbish helpus page
 - Helpus total rework, removed from the menu as of now
+- Let the user remove its comments
 - (lblume) Legende de couleur pour lpatches difficile a distinguer (recommended/security/withdrawn/obsolete)
 
 
