--- a/TODO
+++ b/TODO
@@ -22,4 +22,4 @@ Processing:
 - pkg list -u parser
 - better Architecture parsing and sorting
 - Add checksum check when downloading patches
-
+- History for bundles (in/out and updated patches)
