--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ Frontend:
 - Add a sort by function to the patch list mechanism.
 - add a md5 search for files to find from which patches they originates...
 - Build a tree of patch revision timeline...
+- Refurbish patch details page with instant loading...
 
 Processing:
 
