tgo: Added the mailling list for weekly report code.      Improved the look of the sample output.
tgo: Improved again the patchdiag.xref generation code

--- a/TODO
+++ b/TODO
@@ -25,6 +25,7 @@ Processing:
 - Add checksum check when downloading patches
 - History for bundles (in/out and updated patches)
 - Timeline for patches (obsoletion, new release, new note, etc..)
+- READMEs: cleanup the output of diff
 
 LOOK AT:
 
