--- a/TODO
+++ b/TODO
@@ -14,6 +14,8 @@ Frontend:
 - Build a tree of patch revision timeline...
 - Refurbish patch details page with instant loading...
 
+- SSL LOGIN
+
 API:
 
 - Add ability to search for a path and list down every md5sum associated and where they belongs
