tgo: Added pTimeline obj      Added /ptimeline to show patch lifecycle timeline      Allow /ptimeline to show timeline of a single patch      Allow /ptimeline to show timeline for a patch and all its revisions      Allow /ptimeline to show timeline for a specified patchdiag.xref      Added a SVG generator for patch dependancies      Improved some patchdiag code      Build patch object from patchdiag's line      Add routine to diff two patchdiag      Add routine to search obsoleted by patch through patches synopsis      Add routing Get the highest -rev of a patch inside an array.      Add routing to load and pre-parse patchdiag.xref file      Changed 'New' package rules from 7 to 31 days      Added Y2K flag to patches      Fixed colourness in CSS      Allow patchdiag to be downloaded using /patchdiag/id/<id> url scheme      Add link to patch page to display timeline      Updated TODO      Cleanup of old vi-swap files added by mistake      Shortened the announce of Packages over IRC

--- a/TODO
+++ b/TODO
@@ -16,6 +16,8 @@ Frontend:
 
 - SSL LOGIN
 
+- Timeline for a certain patch (show revision, obsoletion and so on a timeline)
+
 API:
 
 - Add ability to search for a path and list down every md5sum associated and where they belongs
